# MechanicsKit

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  VERSION_WORKFLOW.md  example1.ipynb  pyproject.toml  pytest.ini
design/: marimo_md_design.qmd
examples/: README.md  patch_advanced_demo.py  patch_demo.py
examples/notebooks/: display_labeled_latex_examples.ipynb  example1.ipynb  examples_md.ipynb  examples_mesh_onearray.ipynb  examples_patch.ipynb  patch.ipynb
matkit/: __init__.py  latex_array.py  mesh.py  one_array.py  patch.py
mechanicskit/: __init__.py  __init__.pyi  animation_utils.py  arrow.py  colormap_utils.py  fplot.py  gaussint.py  help.py  latex_array.py  markdown.py  patch.py
tests/: README.md  test_field_management.py  test_gaussint.py  test_latex_array.py  test_markdown.py  test_seamless.py  test_sympy_display.py
