[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mechanicskit"
version = "0.3.0"
authors = [
  { name="Mirza Cenanovic", email="mirza.cenanovic@gmail.com" },
]
description = "Mechanics toolkit for engineering education: FEM with 1-based indexing, LaTeX rendering, visualization, and symbolic plotting."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Education",
]
keywords = ["mechanics", "fem", "finite-element-method", "education", "pedagogical", "1-based-indexing", "mesh", "structural-mechanics", "visualization", "fplot"]
dependencies = [
    "numpy>=1.20",
    "matplotlib>=3.0",
    "sympy>=1.10",
]

[project.urls]
"Homepage" = "https://github.com/cenmir/mechanicskit"
"Bug Tracker" = "https://github.com/cenmir/mechanicskit/issues"
"Documentation" = "https://github.com/cenmir/mechanicskit/blob/main/README.md"

[tool.setuptools]
packages = ["mechanicskit"]
